[package]
name = "sage-lisp"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[[bin]]
name = "sagel"
path = "src/main.rs"
required-features = ["build-binary"]

# Add a dependency for the binary
[features]
build-binary = ["clap", "rustyline", "rand"]
clap = ["dep:clap"]
rustyline = ["dep:rustyline"]
rand = ["dep:rand"]

[dependencies]
tracing = "0.1"
lazy_static = "1.4"
clap = { version = "^4.5.4", optional = true, features = ["derive"] }
clap_derive = { version = "^4.5.4", optional = true }
rustyline = { version = "^14.0.0", optional = true }
rand = { version = "^0.8.4", optional = true }