[package]
name = "sage-lisp"
version = "0.1.0"
edition = "2021"

[[bench]]
name = "lisp_benchmarks"
harness = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[[bin]]
name = "sagel"
path = "src/main.rs"
required-features = ["build-binary"]

# Add a dependency for the binary
[features]
build-binary = ["clap", "rustyline", "rand"]
clap = ["dep:clap"]
rustyline = ["dep:rustyline"]
rand = ["dep:rand"]

[dependencies]
tracing = "0.1"
lazy_static = "1.4"
clap = { version = "^4.5.4", optional = true, features = ["derive"] }
clap_derive = { version = "^4.5.4", optional = true }
rustyline = { version = "^14.0.0", optional = true }
rand = { version = "^0.8.4", optional = true }
nom = "7.1.3"
serde = "1.0.204"
serde_yml = "0.0.10"
serde_json = "1.0.120"
env_logger = "0.11.3"

[dev-dependencies]
criterion = "0.4"
rand = "^0.8.4"